--- a/AsadoManager/AsadoManager.UWPApp/App.xaml
+++ b/AsadoManager/AsadoManager.UWPApp/App.xaml
@@ -2,7 +2,6 @@
     x:Class="AsadoManager.UWPApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AsadoManager.UWPApp"
-    RequestedTheme="Light">
+    xmlns:local="using:AsadoManager.UWPApp">
 
 </Application>
